# kp-parser

./: .gitignore  README.md  convert_wmf.sh  convertor.py  extractor.py  hwpx_parser.py  main.py  parser.py  parser_v0.py  pyproject.toml  requirements-dev.txt
docs/: check_refactor.md
scripts/: check_normal_mode.py  parse_hwpx.py
src/kp_parser/: __init__.py
src/kp_parser/config/drug_manual_part2/: parsing_rules.yaml
src/kp_parser/core/: __init__.py  content_hpf_parser.py  header_xml_parser.py  parser.py  section_xml_parser.py
src/kp_parser/utils/: __init__.py  config_utils.py  file_utils.py  logger.py
tests/unit/: test_file_utils.py
